# API-Warehouse-FastAPI

./: .dockerignore  README.md  alembic.ini  dokcercompose.yaml  pyproject.toml  uvicorn_service.py
preparation_work/: app.py  password.py
preparation_work/common/: __init__.py  settings.py
preparation_work/connection/postgres/: conn.py  model.py
preparation_work/connection/postgres/migrations/: env.py
preparation_work/connection/postgres/migrations/versions/: 0fe2a856aee2_creat_role_and_user.py  62dff535ec29_creat_order.py  9c24f97ed062_creat_rack_and_cell.py
preparation_work/router/: __init__.py  identification.py
